--- a/index.html
+++ b/index.html
@@ -60,13 +60,8 @@
 <!-- navbar -->
   <nav id="navScroll" class="navbar navbar-expand-lg navbar-light fixed-top" tabindex="0">
     <div class="container">
-      <a class="navbar-brand pe-4 fs-4" href="/">
-        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-layers-half"
-          viewbox="0 0 16 16">
-          <path
-            d="M8.235 1.559a.5.5 0 0 0-.47 0l-7.5 4a.5.5 0 0 0 0 .882L3.188 8 .264 9.559a.5.5 0 0 0 0 .882l7.5 4a.5.5 0 0 0 .47 0l7.5-4a.5.5 0 0 0 0-.882L12.813 8l2.922-1.559a.5.5 0 0 0 0-.882l-7.5-4zM8 9.433 1.562 6 8 2.567 14.438 6 8 9.433z" />
-        </svg>
-        <span class="ms-1 fw-bolder">SunEd</span>
+      <a class="navbar-brand pe-4 fs-4" href="index.html">
+        <img src="/img/img_Sune/index/logo.png" alt="">
       </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -74,7 +69,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link" href="#Home" aria-label="Brings you to the frontpage">
               Home
@@ -171,7 +166,6 @@
               that enhance skills and employability, directly aligning education with real-world applications and
               learner success.</p>
           </div>
-
           <div class="col-md-6 col-lg-4 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="400">
             <span class="h5 fw-lighter">05.</span>
             <h3 class="py-5 border-top border-dark">D - Diligent</h3>
@@ -237,15 +231,15 @@
           <div class="col-12">
             <div class="row py-vh-5 d-flex align-items-center news-content" style="text-align: center;">
               <div class="col-md-4" data-aos="fade-up">
-                <img src="img/img_Sune/news/blogs/blog1-1.avif" class="img-fluid rounded shadow" alt="nice gallery image" style="height:228.639px;">
+                <img src="img/img_Sune/news/blogs/blog1-1.avif" class="img-fluid rounded shadow" alt="nice gallery image">
                 <a href="">Education sector focuses on reform and innovation for the upcoming academic year</a>
               </div>
               <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
-                <img src="img/img_Sune/news/blogs/blog2-1.png" class="img-fluid rounded shadow" alt="nice gallery image" style="height:228.639px;">
+                <img src="img/img_Sune/news/blogs/blog2-1.png" class="img-fluid rounded shadow" alt="nice gallery image">
                 <a href="">Summary of the 2023-2024 school year for secondary education ...</a>
               </div>
               <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
-                <img src="img/img_Sune/news/blogs/blog3-1.avif" class="img-fluid rounded shadow" alt="nice gallery image" style="height:228.639px;">
+                <img src="img/img_Sune/news/blogs/blog3-1.avif" class="img-fluid rounded shadow" alt="nice gallery image">
                 <a href="">Making English Vietnam's second language: A challenging but necessary task </a>
               </div>
             </div>
@@ -253,28 +247,6 @@
           </div>
         </div>
       </div>
-<!-- FEEDBACK -->
-    <!-- <div class="container py-vh-4 w-100 overflow-hidden">
-      <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-lg-5">
-          <h3 class="py-5 border-top border-dark" data-aos="fade-right">What our clients say</h3>
-        </div>
-        <div class="col-md-7" data-aos="fade-left">
-          <blockquote>
-            <div class="fs-4 my-3 fw-light pt-4 border-bottom pb-3">“I´am the CEO of this company. So maybe you think
-              "he will tell us something super awesome about it only". But no. Its a really strange place to work with
-              creepy people all around.
-              They do some computer stuff I don´t understand. But I wear expensive Glasses and a Patagonia Hoodie. So
-              I´am fine with it.”</div>
-            <img src="img/webp/person11.webp" width="64" height="64" class="img-fluid rounded-circle me-3" alt=""
-              data-aos="fade">
-            <span><span class="fw-bold">John Doe,</span>
-              CEO of Stride Ltd.</span>
-          </blockquote>
-        </div>
-
-      </div>
-    </div> -->
 <!-- ACTION CALL -->
     <div class="py-vh-6 bg-gray-900 text-light w-100 overflow-hidden" id="workwithus">
       <div class="container">
@@ -287,7 +259,6 @@
               <a href="#" class="btn btn-xl shadow me-3 mt-2" style="background-color:#ffbc2c;border-radius: 10px;" data-aos="fade-down">Contact Us</a>
             </div>
           </div>
-
         </div>
       </div>
     </div>
@@ -297,14 +268,14 @@
       <div class="row">
           <div class="col-6 contact-left">
               <div class="text-center">
-                  <h2>Ready to expand your horizons?</h2>
-                  <img src="img/img_Sune/index/contact-img.avif" alt="Kite Image">
+                  <h2 data-aos="fade-right" data-aos-delay="200">Ready to expand your horizons?</h2>
+                  <img src="img/img_Sune/index/contact-img.avif" alt="Kite Image" class="shadow" data-aos="fade-up" data-aos-delay="500">
               </div>
           </div>
           <div class="col-6">
               <div class="contact-right">
-                  <h3>Contact us</h3>
-                  <form>
+                  <h3 data-aos="fade-left" data-aos-delay="200">Contact us</h3>
+                  <form data-aos="fade-left" data-aos-delay="500">
                       <div class="mb-3">
                           <label class="form-label">First Name *</label>
                           <input type="text" class="form-control" required="">
