push code lan 2 len main

--- a/index.html
+++ b/index.html
@@ -5,17 +5,27 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
   <meta name="description" content="">
-  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/img_Sune/index/logo.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/img_Sune/index/logo.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/img_Sune/index/logo.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/img_Sune/index/logo.png">
   <meta name="author" content="Rei">
   <meta name="HandheldFriendly" content="true">
   <title>SunEd</title>
   <link rel="stylesheet" href="css/theme.min.css">
   <link rel="stylesheet" href="css/custom.css">
-
+<!-- font chữ -->
   <style>
+    /* logo font */
+    @font-face {
+    font-family: 'Hanzel';
+    src: 
+        url('/font/UTMHanzel.woff2') format('woff2'),
+        url('/font/UTMHanzel.woff') format('woff'),
+        url('/font/UTM-Hanzel.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
     /* inter-300 - latin */
     @font-face {
       font-family: 'Inter';
@@ -107,8 +117,8 @@
   </nav>
 <!-- content -->
   <main>
-    <div class="w-100 overflow-hidden bg-gray-100" id="top">
-
+    <!-- CAROUSEL -->
+    <div class="w-100 overflow-hidden bg-gray-100 carousel" id="top">
       <div class="container position-relative">
         <div class="col-12 col-lg-8 mt-0 h-100 position-absolute top-0 end-0 bg-cover" data-aos="fade-left"
           style="background-image: url(img/img_Sune/index/carousel-background.avif);">
