--- a/index.html
+++ b/index.html
@@ -316,22 +316,21 @@
       <div class="row py-5 d-flex justify-content-between">
 
         <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-layers-half"
-            viewbox="0 0 16 16">
-            <path
-              d="M8.235 1.559a.5.5 0 0 0-.47 0l-7.5 4a.5.5 0 0 0 0 .882L3.188 8 .264 9.559a.5.5 0 0 0 0 .882l7.5 4a.5.5 0 0 0 .47 0l7.5-4a.5.5 0 0 0 0-.882L12.813 8l2.922-1.559a.5.5 0 0 0 0-.882l-7.5-4zM8 9.433 1.562 6 8 2.567 14.438 6 8 9.433z" />
-          </svg>
+          <img src="/img/img_Sune/index/logo.png" alt="Company Logo" style="width: 4rem;">
           <address class="text-secondary mt-3">
-            <strong>Stride, Inc.</strong><br>
-            1355 Market St, Suite 900<br>
-            San Francisco, CA 94103<br>
-            <abbr title="Phone">P:</abbr>
-            (123) 456-7890
+            478 Nguyen Tat Thanh Street, Ward 18,District 4, Ho Chi Minh City, Viet Nam.<br>
+            info@suned.edu.vn<br>
+            <abbr title="Phone">+84 779 661 879</abbr> 
           </address>
         </div>
         <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
-          <h3 class="h6 mb-3">Company</h3>
-          <ul class="nav flex-column">
+          <h3 class="h6 mb-3">HEAD OFFICE</h3>
+          <address class="text-secondary mt-3">
+            478 Nguyen Tat Thanh Street, Ward 18,District 4, Ho Chi Minh City, Viet Nam.<br><br>
+            <a href="">+84 779 661 879</a><br><br>
+            <a href="">info@suned.edu.vn</a>
+          </address>
+          <!-- <ul class="nav flex-column">
             <li class="nav-item">
               <a class="nav-link link-secondary ps-0" aria-current="page" href="#">Lorem ipsum</a>
             </li>
@@ -344,45 +343,42 @@
             <li class="nav-item">
               <a class="nav-link link-secondary ps-0" href="#">Commodo tortor ac</a>
             </li>
-          </ul>
+          </ul> -->
         </div>
         <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
-          <h3 class="h6 mb-3">Products</h3>
+          <h3 class="h6 mb-3">
+            NAVIGATION
+          </h3>
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" aria-current="page" href="#">Fusce dapibus est</a>
+              <a class="nav-link link-secondary ps-0" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" href="#">Donec sed dui</a>
+              <a class="nav-link link-secondary ps-0" href="#">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" href="#">Tortor mauris</a>
+              <a class="nav-link link-secondary ps-0" href="#">News</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" href="#">Ut fermentum massa</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" href="#">Magna mollis</a>
+              <a class="nav-link link-secondary ps-0" href="#">Contact</a>
             </li>
           </ul>
         </div>
         <div class="col-12 col-lg-6 col-xl-3 p-5">
-          <h3 class="h6 mb-3">Subpages</h3>
+          <h3 class="h6 mb-3">FOLLOW US</h3>
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" aria-current="page" href="404.html">404 System Page</a>
-              <a class="nav-link link-secondary ps-0" aria-current="page" href="register.html">Register System Page</a>
-              <a class="nav-link link-secondary ps-0" aria-current="page" href="content.html">Simple Text Content
-                Page</a>
+              <a class="nav-link link-secondary ps-0" aria-current="page" href="register.html">Zalo</a>
+              <a class="nav-link link-secondary ps-0" aria-current="page" href="content.html">Facebook</a>
+              <a class="nav-link link-secondary ps-0" aria-current="page" href="content.html">X</a>
             </li>
           </ul>
         </div>
       </div>
     </div>
 
-    <div class="container text-center py-3 small">Made by <a href="https://templatedeck.com" class="link-fancy"
-        target="_blank">templatedeck.com</a>
+    <div class="container text-center py-3 small">© 2024 by <a href="https://www.suned.edu.vn/"class="link-fancy"
+        target="_blank">SunEd</a>
     </div>
   </footer>
 
