--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
   <meta name="description" content="">
-  <link rel="apple-touch-icon" sizes="180x180" href="img/img_Sune/index/logo.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/img_Sune/index/logo.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/img_Sune/index/logo.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="img/img_Sune/index/logo.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/img_Sune/index/sunedfav.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/img_Sune/index/sunedfav.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/img_Sune/index/sunedfav.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/img_Sune/index/sunedfav.png">
   <meta name="author" content="Rei">
   <meta name="HandheldFriendly" content="true">
   <title>SunEd</title>
@@ -18,11 +18,11 @@
   <style>
     /* logo font */
     @font-face {
-    font-family: 'Hanzel';
+    font-family: 'hanzel';
     src: 
-        url('/font/UTMHanzel.woff2') format('woff2'),
-        url('/font/UTMHanzel.woff') format('woff'),
-        url('/font/UTM-Hanzel.ttf') format('truetype');
+        url('./fonts/UTMHanzel.woff2') format('woff2'),
+        url('./fonts/UTMHanzel.woff') format('woff'),
+        url('./fonts/UTM-Hanzel.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -130,7 +130,7 @@
             <a href="#" class="btn btn-dark btn-xl shadow me-3 rounded-0 my-5" style="background-color: #ffbc2c;font-size:1rem;font-weight: 600;padding: 0.5rem;">Contact us</a>
           </div>
         </div>
-      </div>
+      </div> 
 
     </div>
 
@@ -144,7 +144,7 @@
         <div class="row d-flex align-items-center">
           <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <span class="h5 fw-lighter">01.</span>
-            <h3 class="py-5 border-top border-dark">S - Supportive</h3>
+            <h3 class="py-5 border-top border-dark"><span style="color: #ffbc2c;">S</span> - Supportive</h3>
             <p>SunEd seeks to offer personalized guidance, resources, and responsive assistance to help students achieve
               their learning goals effectively. We ensure accessibility to learning tools and create a nurturing
               environment that addresses both academic and personal needs of learners.</p>
@@ -153,7 +153,7 @@
           </div>
           <div class="col-md-6 col-lg-4 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="400">
             <span class="h5 fw-lighter">02.</span>
-            <h3 class="py-5 border-top border-dark">U - Utilitarian</h3>
+            <h3 class="py-5 border-top border-dark"><span style="color: #ffbc2c;">U</span> - Utilitarian</h3>
             <p>Focusing on practical, outcome-oriented support maximizes educational benefits for the largest number of
               students. This approach ensures efficient use of resources, streamlined curricula, and access to tools
               that enhance skills and employability, directly aligning education with real-world applications and
@@ -161,7 +161,7 @@
           </div>
           <div class="col-md-6 col-lg-4 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="600">
             <span class="h5 fw-lighter">03.</span>
-            <h3 class="py-5 border-top border-dark">N - Needed</h3>
+            <h3 class="py-5 border-top border-dark"><span style="color: #ffbc2c;">N</span> - Needed</h3>
             <p>SunEd seeks to offer personalized guidance, resources, and responsive assistance to help students achieve
               their learning goals effectively. We ensure accessibility to learning tools and create a nurturing
               environment that addresses both academic and personal needs of learners.</p>
@@ -170,7 +170,7 @@
         <div class="row d-flex align-items-center">
           <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <span class="h5 fw-lighter">04.</span>
-            <h3 class="py-5 border-top border-dark">E - Efficient</h3>
+            <h3 class="py-5 border-top border-dark"><span style="color: #3c4493;">E</span> - Efficient</h3>
             <p>Focusing on practical, outcome-oriented support maximizes educational benefits for the largest number of
               students. This approach ensures efficient use of resources, streamlined curricula, and access to tools
               that enhance skills and employability, directly aligning education with real-world applications and
@@ -178,7 +178,7 @@
           </div>
           <div class="col-md-6 col-lg-4 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="400">
             <span class="h5 fw-lighter">05.</span>
-            <h3 class="py-5 border-top border-dark">D - Diligent</h3>
+            <h3 class="py-5 border-top border-dark"><span style="color:#3c4493;">D</span> - Diligent</h3>
             <p>SunEd seeks to offer personalized guidance, resources, and responsive assistance to help students achieve
               their learning goals effectively. We ensure accessibility to learning tools and create a nurturing
               environment that addresses both academic and personal needs of learners.</p>
@@ -187,8 +187,7 @@
           <div class="col-md-6 col-lg-4 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="600">
             <span class="h5 fw-lighter">06.</span>
             <h3 class="py-5 border-top border-dark"><strong>Our Vision</strong></h3>
-            <p>SunEd becomes one of the leading education and training providers in Vietnam and the region to provide
-              affordable pathways for learners to interact with the international community.</p>
+            <p>"<strong>SunEd</strong> becomes one of the leading education and training providers in Vietnam and the region to provide affordable pathways for learners to interact with the international community."</p>
           </div>
         </div>
       </div>
@@ -316,12 +315,7 @@
       <div class="row py-5 d-flex justify-content-between">
 
         <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
-          <img src="/img/img_Sune/index/logo.png" alt="Company Logo" style="width: 4rem;">
-          <address class="text-secondary mt-3">
-            478 Nguyen Tat Thanh Street, Ward 18,District 4, Ho Chi Minh City, Viet Nam.<br>
-            info@suned.edu.vn<br>
-            <abbr title="Phone">+84 779 661 879</abbr> 
-          </address>
+          <img src="/img/img_Sune/index/logo.png" alt="Company Logo" style="width: 8rem;">
         </div>
         <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
           <h3 class="h6 mb-3">HEAD OFFICE</h3>
