--- a/content.html
+++ b/content.html
@@ -14,6 +14,7 @@
   <meta name="HandheldFriendly" content="true">
   <title>Plain Content Sample Page</title>
   <link rel="stylesheet" href="css/theme.min.css">
+  <link rel="stylesheet" href="/css/custom.css">
 
   <style>
 
@@ -48,67 +49,65 @@
 }
 
 </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EBNZDCMW23"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  </head>
+  gtag('config', 'G-EBNZDCMW23');
+</script>
+</head>
 
   <body data-bs-spy="scroll" data-bs-target="#navScroll">
-
-    <nav id="navScroll" class="navbar navbar-expand-lg navbar-light" tabindex="0">
-  <div class="container">
-    <a class="navbar-brand pe-4 fs-4" href="/">
-  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-layers-half" viewbox="0 0 16 16">
-    <path d="M8.235 1.559a.5.5 0 0 0-.47 0l-7.5 4a.5.5 0 0 0 0 .882L3.188 8 .264 9.559a.5.5 0 0 0 0 .882l7.5 4a.5.5 0 0 0 .47 0l7.5-4a.5.5 0 0 0 0-.882L12.813 8l2.922-1.559a.5.5 0 0 0 0-.882l-7.5-4zM8 9.433 1.562 6 8 2.567 14.438 6 8 9.433z"/>
-  </svg>
-  <span class="ms-1 fw-bolder">Stride</span>
-</a>
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-    <a class="nav-link" href="#services" aria-label="Brings you to the frontpage">
-      Services
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#aboutus">
-      About us
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#numbers">
-      Numbers
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#gallery">
-      Gallery
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#workwithus">
-      Work with us
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#testimonials">
-      Testimonials
-    </a>
-  </li>
-
-    </ul>
-      <a href="https://templatedeck.com" data-splitbee-event="Click Download" aria-label="Download this template" class="link-dark pb-1 link-fancy me-2">
-        Download this Template       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download ms-1" viewBox="0 0 16 16">
-                <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
-                <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
-              </svg>
-      </a>
-
-    </div>
-</div>
-</nav>
+    <!-- NAV -->
+    <nav id="navScroll" class="navbar navbar-expand-lg navbar-light fixed-top" tabindex="0">
+      <div class="container">
+        <a class="navbar-brand pe-4 fs-4" href="index.html">
+          <img src="/img/img_Sune/index/logo.png" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="/content.html" aria-label="Brings you to the frontpage">
+                Home
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#aboutus">
+                About us
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#numbers">
+                Contact
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#gallery">
+                News
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#workwithus">
+                EN
+              </a>
+            <li class="nav-item">
+              <a class="nav-link" href="#workwithus">
+                VN
+              </a>
+            </li>
+  
+  
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <main>
       <div class="py-vh-5 w-100 overflow-hidden" id="services">
@@ -183,76 +182,57 @@
 </div>
 
     </main>
-
-    <footer>
+<!-- footer -->
+<footer>
   <div class="container small border-top">
     <div class="row py-5 d-flex justify-content-between">
 
-<div class="col-12 col-lg-6 col-xl-3 border-end p-5">
-  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-layers-half" viewbox="0 0 16 16">
-    <path d="M8.235 1.559a.5.5 0 0 0-.47 0l-7.5 4a.5.5 0 0 0 0 .882L3.188 8 .264 9.559a.5.5 0 0 0 0 .882l7.5 4a.5.5 0 0 0 .47 0l7.5-4a.5.5 0 0 0 0-.882L12.813 8l2.922-1.559a.5.5 0 0 0 0-.882l-7.5-4zM8 9.433 1.562 6 8 2.567 14.438 6 8 9.433z"/>
-  </svg>
-  <address class="text-secondary mt-3">
-    <strong>Stride, Inc.</strong><br>
-    1355 Market St, Suite 900<br>
-    San Francisco, CA 94103<br>
-    <abbr title="Phone">P:</abbr>
-    (123) 456-7890
-  </address>
-</div>
-<div class="col-12 col-lg-6 col-xl-3 border-end p-5">
-  <h3 class="h6 mb-3">Company</h3>
-  <ul class="nav flex-column">
-    <li class="nav-item">
-      <a class="nav-link link-secondary ps-0" aria-current="page" href="#">Lorem ipsum</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link link-secondary ps-0" href="#">Dolor sitam est</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link link-secondary ps-0" href="#">Sed odio cras</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link link-secondary ps-0" href="#">Commodo tortor ac</a>
-    </li>
-  </ul>
-</div>
-<div class="col-12 col-lg-6 col-xl-3 border-end p-5">
-  <h3 class="h6 mb-3">Products</h3>
-  <ul class="nav flex-column">
-    <li class="nav-item">
-      <a class="nav-link link-secondary ps-0" aria-current="page" href="#">Fusce dapibus est</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link link-secondary ps-0" href="#">Donec sed dui</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link link-secondary ps-0" href="#">Tortor mauris</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link link-secondary ps-0" href="#">Ut fermentum massa</a>
-    </li>
+      <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
+        <img src="/img/img_Sune/index/logo.png" alt="Company Logo" style="width: 8rem;">
+      </div>
+      <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
+        <h3 class="h6 mb-3">HEAD OFFICE</h3>
+        <address class="text-secondary mt-3">
+          478 Nguyen Tat Thanh Street, Ward 18,District 4, Ho Chi Minh City, Viet Nam.<br><br>
+          <a href="">+84 779 661 879</a><br><br>
+          <a href="">info@suned.edu.vn</a>
+        </address>
+      </div>
+      <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
+        <h3 class="h6 mb-3">
+          NAVIGATION
+        </h3>
+        <ul class="nav flex-column">
+          <li class="nav-item">
+            <a class="nav-link link-secondary ps-0" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link-secondary ps-0" href="#">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link-secondary ps-0" href="#">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link-secondary ps-0" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-12 col-lg-6 col-xl-3 p-5">
+        <h3 class="h6 mb-3">FOLLOW US</h3>
+        <ul class="nav flex-column">
+          <li class="nav-item">
+            <a class="nav-link link-secondary ps-0" aria-current="page" href="register.html">Zalo</a>
+            <a class="nav-link link-secondary ps-0" aria-current="page" href="content.html">Facebook</a>
+            <a class="nav-link link-secondary ps-0" aria-current="page" href="content.html">X</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-    <li class="nav-item">
-      <a class="nav-link link-secondary ps-0" href="#">Magna mollis</a>
-    </li>
-  </ul>
-</div>
-<div class="col-12 col-lg-6 col-xl-3 p-5">
-  <h3 class="h6 mb-3">Subpages</h3>
-  <ul class="nav flex-column">
-    <li class="nav-item">
-      <a class="nav-link link-secondary ps-0" aria-current="page" href="404.html">404 System Page</a>
-      <a class="nav-link link-secondary ps-0" aria-current="page" href="register.html">Register System Page</a>
-            <a class="nav-link link-secondary ps-0" aria-current="page" href="content.html">Simple Text Content Page</a>
-    </li>
-  </ul>
-</div>
-</div>
-</div>
-
-<div class="container text-center py-3 small">Made by <a href="https://templatedeck.com" class="link-fancy" target="_blank">templatedeck.com</a>
-</div>
+  <div class="container text-center py-3 small">© 2024 by <a href="https://www.suned.edu.vn/"class="link-fancy"
+      target="_blank">SunEd</a>
+  </div>
 </footer>
 
 <script src="js/bootstrap.bundle.min.js"></script>
