--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#Home" aria-label="Brings you to the frontpage">
+            <a class="nav-link" href="/content.html" aria-label="Brings you to the frontpage">
               Home
             </a>
           </li>
