--- a/content.html
+++ b/content.html
@@ -49,14 +49,14 @@
 }
 
 </style>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-EBNZDCMW23"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X6M0JGJ7RW"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-EBNZDCMW23');
+  gtag('config', 'G-X6M0JGJ7RW');
 </script>
 </head>
 
