--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="">
   <link rel="apple-touch-icon" sizes="180x180" href="img/img_Sune/index/sunedfav.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/img_Sune/index/sunedfav.png">
@@ -271,7 +271,7 @@
       </div>
     </div>
 <!-- CONTACT FORM -->
-<section class="contact">
+<div class="contact">
   <div class="container">
       <div class="row">
           <div class="col-6 contact-left">
@@ -306,7 +306,7 @@
           </div>
       </div>
   </div>
-</section>
+</>
   </main>
 <!-- footer -->
   <footer>
