--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="img/img_Sune/index/sunedfav.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/img_Sune/index/sunedfav.png">
   <link rel="icon" type="image/png" sizes="96x96" href="img/img_Sune/index/sunedfav.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <meta name="author" content="Rei">
   <meta name="HandheldFriendly" content="true">
   <title>SunEd</title>
@@ -123,10 +124,10 @@
           style="background-image: url(img/img_Sune/index/carousel-background.avif);">
         </div>
         <div class="row">
-          <div class="col-lg-7 py-vh-6 position-relative" data-aos="fade-right">
+          <div class="col col-lg-7 py-vh-6 position-relative" data-aos="fade-right">
             <h1 class="display-1 fw-bold mt-5"><span style="color:#ffbc2c;">Sun</span><span style="color: #3c4493;">Ed</span></h1>
             <p class="lead">Expanding Horizons - Empowering Futures</p>
-            <a href="#" class="btn btn-dark btn-xl shadow me-3 rounded-0 my-5" style="background-color: #ffbc2c;font-size:1rem;font-weight: 600;padding: 0.5rem;">Contact us</a>
+            <a href="#" class="btn btn-dark btn-xl me-3 my-1"><i class="fa-solid fa-envelope" style="padding-right: 0.3rem;"></i>Contact us</a>
           </div>
         </div>
       </div> 
