--- a/index.html
+++ b/index.html
@@ -133,11 +133,14 @@
       </div> 
 
     </div>
-
+    <!-- SLOGAN -->
     <div class="py-vh-5 w-100 overflow-hidden" id="services">
       <div class="container">
-        <div class="row d-flex justify-content-end">
-          <div class="col-lg-8" data-aos="fade-down">
+        <div class="row d-flex justify-content-end slogan">
+          <div class="col-lg-3 d-flex align-items-center" data-aos="fade-down">
+            <h1 class="display-6" style="font-family: hanzel,serif;"><span style="color: #ffbc2c;">Sun</span><span style="color: #3c4493;">Ed</span></h1>
+          </div>
+          <div class="col-lg-8" data-aos="fade-left">
             <h2 class="display-6">"Expanding Horizons - Empowering Futures"</h2>
           </div>
         </div>
