thêm gg analytics tag

--- a/news.html
+++ b/news.html
@@ -16,6 +16,14 @@
     <link rel="stylesheet" href="css/theme.min.css">
     <link rel="stylesheet" href="css/news.css">
     <link rel="stylesheet" href="css/custom.css">
+    <!-- ggtag tracking -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X6M0JGJ7RW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-X6M0JGJ7RW');
+    </script>
     <!-- font chữ -->
     <style>
         /* logo font */
@@ -148,30 +156,32 @@
                     </div>
                 </div>
                 <div class="row d-flex align-items-center">
-                    <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-md-6 col-lg-4 pb-1" data-aos="fade-up" data-aos-delay="200">
                         <span class="h5 fw-lighter">01.</span>
                         <img src="/img/img_Sune/news/blogs/blog1-1.avif" alt="" style="width: 20rem;height: 13rem;">
-                        <a href="/blog1.html">Education sector focuses on reform and innovation for the upcoming academic year</a>
+                        <a href="/blog1.html">Education sector focuses on reform and innovation for the upcoming
+                            academic year</a>
                     </div>
-                    <div class="col-md-6 col-lg-4 py-vh-2 pb-0" data-aos="fade-up" data-aos-delay="400">
+                    <div class="col-md-6 col-lg-4 py-vh-2 pb-1" data-aos="fade-up" data-aos-delay="400">
                         <span class="h5 fw-lighter">02.</span>
                         <img src="/img/img_Sune/news/blogs/blog2-1.png" alt="" style="width: 20rem;height: 13rem;">
-                        <a href="/blog2.html">Summary of the 2023-2024 school year for secondary education and continuing education</a>
+                        <a href="/blog2.html">Summary of the 2023-2024 school year for secondary education and
+                            continuing education</a>
                     </div>
-                    <div class="col-md-6 col-lg-4 pb-0" data-aos="fade-up" data-aos-delay="600">
+                    <div class="col-md-6 col-lg-4 pb-1" data-aos="fade-up" data-aos-delay="600">
                         <span class="h5 fw-lighter">03.</span>
                         <img src="/img/img_Sune/news/blogs/blog3-1.avif" alt="" style="width: 20rem;height: 13rem;">
                         <a href="/blog3.html">Making English Vietnam's second language: A challenging but necessary task
-                        </>
+                            </>
                     </div>
                 </div>
                 <div class="row d-flex align-items-center">
-                    <div class="col-md-6 col-lg-4 pb-0" data-aos="fade-up" data-aos-delay="200">
+                    <div class="col-md-6 col-lg-4 pb-1" data-aos="fade-up" data-aos-delay="200">
                         <span class="h5 fw-lighter">04.</span>
                         <img src="/img/img_Sune/news/blogs/blog 4.avif" alt="" style="width: 20rem;height: 13rem;">
-                        <a href="/blog4.html">Việt Nam welcomes 22,000 international students for this academic year</a>
+                        <a href="/blog4.html">Việt Nam welcomes 22,000 international students for this academic year</a>
                     </div>
-                    <div class="col-md-6 col-lg-4 pb-0" data-aos="fade-up" data-aos-delay="400">
+                    <div class="col-md-6 col-lg-4 pb-1" data-aos="fade-up" data-aos-delay="400">
                         <span class="h5 fw-lighter">05.</span>
                         <img src="/img/img_Sune/news/blogs/blog-5.avif" alt="" style="width: 20rem;height: 13rem;">
                         <a href="/blog5.html">Vietnam embraces chance to become international student hub </a>
