--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
   <title>SunEd</title>
   <link rel="stylesheet" href="css/theme.min.css">
   <link rel="stylesheet" href="css/custom.css">
+  <!-- ggtag tracking -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X6M0JGJ7RW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-X6M0JGJ7RW');
+  </script>  
 <!-- font chữ -->
   <style>
     /* logo font */
