--- a/news.html
+++ b/news.html
@@ -36,7 +36,6 @@
             font-weight: normal;
             font-style: normal;
         }
-
         /* inter-300 - latin */
         @font-face {
             font-family: 'Inter';
@@ -144,9 +143,9 @@
 
         </div>
         <!-- SLOGAN + NEWS-->
-        <div class="py-vh-4 w-100 overflow-hidden" id="services">
+        <div class="py-vh-4 w-100 overflow-hidden">
             <div class="container">
-                <div class="row d-flex justify-content-end slogan">
+                <div class="row slogan d-flex justify-content-end">
                     <div class="col-lg-3 d-flex align-items-center" data-aos="fade-down">
                         <h1 class="display-6" style="font-family: hanzel,serif;"><span
                                 style="color: #ffbc2c;">Sun</span><span style="color: #3c4493;">Ed</span></h1>
@@ -155,118 +154,47 @@
                         <h2 class="display-6">"Expanding Horizons - Empowering Futures"</h2>
                     </div>
                 </div>
-                <div class="row d-flex align-items-center">
-                    <div class="col-md-6 col-lg-4 pb-1" data-aos="fade-up" data-aos-delay="200">
+                <div class="row d-flex align-items-center news" >
+                    <div class="col-md-6 col-lg-4 pb-0 blog-col" data-aos="fade-up" data-aos-delay="200">
                         <span class="h5 fw-lighter">01.</span>
-                        <img src="/img/img_Sune/news/blogs/blog1-1.avif" alt="" style="width: 20rem;height: 13rem;">
+                        <img src="/img/img_Sune/news/blogs/blog1-1.avif" alt="">
                         <a href="/blog1.html">Education sector focuses on reform and innovation for the upcoming
                             academic year</a>
                     </div>
-                    <div class="col-md-6 col-lg-4 py-vh-2 pb-1" data-aos="fade-up" data-aos-delay="400">
+                    <div class="col-md-6 col-lg-4 py-vh-2 pb-0 blog-col" data-aos="fade-up" data-aos-delay="400">
                         <span class="h5 fw-lighter">02.</span>
-                        <img src="/img/img_Sune/news/blogs/blog2-1.png" alt="" style="width: 20rem;height: 13rem;">
+                        <img src="/img/img_Sune/news/blogs/blog2-1.png" alt="">
                         <a href="/blog2.html">Summary of the 2023-2024 school year for secondary education and
                             continuing education</a>
                     </div>
-                    <div class="col-md-6 col-lg-4 pb-1" data-aos="fade-up" data-aos-delay="600">
+                    <div class="col-md-6 col-lg-4 pb-0 blog-col" data-aos="fade-up" data-aos-delay="600">
                         <span class="h5 fw-lighter">03.</span>
-                        <img src="/img/img_Sune/news/blogs/blog3-1.avif" alt="" style="width: 20rem;height: 13rem;">
+                        <img src="/img/img_Sune/news/blogs/blog3-1.avif" alt="">
                         <a href="/blog3.html">Making English Vietnam's second language: A challenging but necessary task
-                            </>
+                        </a>
                     </div>
                 </div>
-                <div class="row d-flex align-items-center">
-                    <div class="col-md-6 col-lg-4 pb-1" data-aos="fade-up" data-aos-delay="200">
+                <div class="row d-flex align-items-center news" >
+                    <div class="col-md-6 col-lg-4 pb-1 blog-col" data-aos="fade-up" data-aos-delay="200">
                         <span class="h5 fw-lighter">04.</span>
-                        <img src="/img/img_Sune/news/blogs/blog 4.avif" alt="" style="width: 20rem;height: 13rem;">
+                        <img src="/img/img_Sune/news/blogs/blog 4.avif" alt="" >
                         <a href="/blog4.html">Việt Nam welcomes 22,000 international students for this academic year</a>
                     </div>
-                    <div class="col-md-6 col-lg-4 pb-1" data-aos="fade-up" data-aos-delay="400">
+                    <div class="col-md-6 col-lg-4 pb-1 blog-col" data-aos="fade-up" data-aos-delay="400">
                         <span class="h5 fw-lighter">05.</span>
-                        <img src="/img/img_Sune/news/blogs/blog-5.avif" alt="" style="width: 20rem;height: 13rem;">
+                        <img src="/img/img_Sune/news/blogs/blog-5.avif" alt="" >
                         <a href="/blog5.html">Vietnam embraces chance to become international student hub </a>
                     </div>
-                    <div class="col-md-6 col-lg-4 pb-0" data-aos="fade-up" data-aos-delay="600">
+                    <div class="col-md-6 col-lg-4 pb-0 blog-col" data-aos="fade-up" data-aos-delay="600">
                         <span class="h5 fw-lighter">06.</span>
-                        <img src="/img/img_Sune/news/blogs/bblog-6.avif" alt="" style="width: 20rem;height: 13rem;">
+                        <img src="/img/img_Sune/news/blogs/bblog-6.avif" alt="">
                         <a href="/blog6.html">Roadmap needed to make English the second language in schools
                         </a>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- MISSION -->
-        <div class="py-vh-4 bg-gray-100 w-100 overflow-hidden mission" id="aboutus">
-            <div class="container">
 
-                <div class="row d-flex justify-content-between align-items-center">
-                    <div class="col-lg-6">
-                        <div class="row gx-5 d-flex">
-                            <div class="col-md-11">
-                                <div class="shadow ratio ratio-16x9 rounded bg-cover bp-center align-self-end"
-                                    data-aos="fade-right" style="background-image: url(img/363e7da2-1024.jpeg);--bs-aspect-ratio: 50%; text-align: center;
-                  align-items: center;">
-                                </div>
-                            </div>
-                            <div class="col-md-5 offset-md-1">
-                                <div class="shadow ratio ratio-1x1 rounded bg-cover mt-5 bp-center float-end"
-                                    data-aos="fade-up" style="background-image: url(img/74d6cec4-768.jpeg);">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="col-12 shadow ratio rounded bg-cover mt-5 bp-center" data-aos="fade-left"
-                                    style="background-image: url(img/webp/people4.webp);--bs-aspect-ratio: 150%;">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <h3 class="py-5 border-top border-dark" data-aos="fade-left" style="font-weight: 800;">Our
-                            Mission</h3>
-                        <ul data-aos="fade-left" data-aos-delay="200" style="font-size: 1rem;">
-                            <li>To introduce liberal arts education to engage learners in different training activities
-                                developmental milestones</li><br>
-                            <li>To equip learners with advanced teaching & learning approach in world-class quality</li>
-                            <br>
-                            <li>To enable learners to access and participate in global discourses and practices</li><br>
-                            <li>To instill a positive attitude towards continuous learning in learners.</li><br>
-                        </ul>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <!-- NEWS -->
-        <div class="position-relative overflow-hidden w-100 bg-light news" id="gallery">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-5 news-title">
-                        <h3 class="py-5 border-top border-dark" data-aos="fade-right">OUR NEWS</h3>
-                    </div>
-                    <div class="col-12">
-                        <div class="row py-vh-5 d-flex align-items-center news-content" style="text-align: center;">
-                            <div class="col-md-4" data-aos="fade-up">
-                                <img src="img/img_Sune/news/blogs/blog1-1.avif" class="img-fluid rounded shadow"
-                                    alt="nice gallery image">
-                                <a href="">Education sector focuses on reform and innovation for the upcoming academic
-                                    year</a>
-                            </div>
-                            <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
-                                <img src="img/img_Sune/news/blogs/blog2-1.png" class="img-fluid rounded shadow"
-                                    alt="nice gallery image">
-                                <a href="">Summary of the 2023-2024 school year for secondary education ...</a>
-                            </div>
-                            <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
-                                <img src="img/img_Sune/news/blogs/blog3-1.avif" class="img-fluid rounded shadow"
-                                    alt="nice gallery image">
-                                <a href="">Making English Vietnam's second language: A challenging but necessary task
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <!-- ACTION CALL -->
         <div class="py-vh-6 bg-gray-900 text-light w-100 overflow-hidden" id="workwithus">
             <div class="container">
