--- a/news.html
+++ b/news.html
@@ -135,7 +135,7 @@
                 <div class="row">
                     <div class="col col-lg-7 py-vh-6 position-relative" data-aos="fade-right">
                         <h2 class="display-1 fw-bold mt-5">News</h2>
-                        <a href="#" class="btn btn-dark btn-xl me-3 my-1"><i class="fa-solid fa-envelope"
+                        <a href="#" class="btn btn-dark btn-xl me-3 my-1"><i class="fa-solid fa-envelope overflow-hidden"
                                 style="padding-right: 0.3rem;"></i>Contact us</a>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
                         <a href="/blog-1.html">Education sector focuses on reform and innovation for the upcoming
                             academic year</a>
                     </div>
-                    <div class="col-md-6 col-lg-4 py-vh-2 pb-0 blog-col" data-aos="fade-up" data-aos-delay="400">
+                    <div class="col-md-6 col-lg-4 pb-0 blog-col" data-aos="fade-up" data-aos-delay="400">
                         <span class="h5 fw-lighter">02.</span>
                         <img src="/img/img_Sune/news/blogs/blog2-1.png" alt="">
                         <a href="/blog-2.html">Summary of the 2023-2024 school year for secondary education and
@@ -249,7 +249,7 @@
                     </div>
                 </div>
             </div>
-            </>
+        </div>
     </main>
     <!-- footer -->
     <footer>
