--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
         </div>
         <div class="row">
           <div class="col col-lg-7 py-vh-6 position-relative" data-aos="fade-right">
-            <h1 class="display-1 fw-bold mt-5"><span style="color:#ffbc2c;">Sun</span><span style="color: #3c4493;">Ed</span></h1>
+            <h1 class="display-1 fw-bold mt-5 overflow-hidden"><span style="color:#ffbc2c;">Sun</span><span style="color: #3c4493;">Ed</span></h1>
             <p class="lead">Expanding Horizons - Empowering Futures</p>
-            <a href="#" class="btn btn-dark btn-xl me-3 my-1"><i class="fa-solid fa-envelope" style="padding-right: 0.3rem;"></i>Contact us</a>
+            <a href="#" class="btn btn-dark btn-xl me-3 my-1"><i class="fa-solid fa-envelope overflow-hidden" style="padding-right: 0.3rem;"></i>Contact us</a>
           </div>
         </div>
       </div> 
