edite - custom.css

--- a/index.html
+++ b/index.html
@@ -284,8 +284,7 @@
                   <img src="img/img_Sune/index/contact-img.avif" alt="Kite Image" class="shadow" data-aos="fade-up" data-aos-delay="500">
               </div>
           </div>
-          <div class="col-6">
-              <div class="contact-right">
+          <div class="col-6 contact-right">
                   <h3 data-aos="fade-left" data-aos-delay="200">Contact us</h3>
                   <form data-aos="fade-left" data-aos-delay="500">
                       <div class="mb-3">
@@ -306,7 +305,6 @@
                       </div>
                       <button type="submit" class="btn btn-custom w-100">Send</button>
                   </form>
-              </div>
           </div>
       </div>
   </div>
