html - language vn _ Contact - index

--- a/index_vn.html
+++ b/index_vn.html
@@ -87,30 +87,29 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html" aria-label="Brings you to the frontpage">
-              Home
+            <a class="nav-link" href="/index_vn.html" aria-label="Brings you to the frontpage">
+              Trang chủ
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/aboutus.html">
-              About us
+            <a class="nav-link" href="/aboutus_vn.html">
+              Giới thiệu
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">
-              Contact
+            <a class="nav-link" href="/contact_vn.html">
+              Liên hệ
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/news.html">
-              News
+            <a class="nav-link" href="/news_vn.html">
+              Tin tức
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/index_vn.html">
-              VN
+            <a class="nav-link" href="/index.html">
+              EN
             </a>
-          </li>
         </ul>
       </div>
     </div>
@@ -126,8 +125,9 @@
         <div class="row">
           <div class="col col-lg-7 py-vh-6 position-relative" data-aos="fade-right">
             <h1 class="display-1 fw-bold mt-5 overflow-hidden"><span style="color:#ffbc2c;">Sun</span><span style="color: #3c4493;">Ed</span></h1>
-            <p class="lead">Expanding Horizons - Empowering Futures</p>
-            <a href="#" class="btn btn-dark btn-xl me-3 my-1"><i class="fa-solid fa-envelope overflow-hidden" style="padding-right: 0.3rem;"></i>Contact us</a>
+            <p class="lead">Thêm Kiến thức
+              - Vững Tương lai</p>
+            <a href="#" class="btn btn-dark btn-xl me-3 my-1"><i class="fa-solid fa-envelope overflow-hidden" style="padding-right: 0.3rem;"></i>Liên hệ</a>
           </div>
         </div>
       </div> 
@@ -141,53 +141,45 @@
             <h1 class="display-6" style="font-family: hanzel,serif;"><span style="color: #ffbc2c;">Sun</span><span style="color: #3c4493;">Ed</span></h1>
           </div>
           <div class="col-lg-8" data-aos="fade-left">
-            <h2 class="display-6">"Expanding Horizons - Empowering Futures"</h2>
+            <h2 class="display-6">"Mở rộng tầm nhìn - Trao quyền tương lai"</h2>
           </div>
         </div>
         <div class="row d-flex align-items-center value">
           <div class="col-1 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <span class="h5 fw-lighter">01.</span>
             <h3 class="py-5 border-top border-dark"><span style="color: #ffbc2c;">S</span> - Supportive</h3>
-            <p>SunEd seeks to offer personalized guidance, resources, and responsive assistance to help students achieve
-              their learning goals effectively. We ensure accessibility to learning tools and create a nurturing
-              environment that addresses both academic and personal needs of learners.</p>
+            <p>SunEd luôn tìm kiếm cung cấp hướng dẫn được cá nhân hóa, các nguồn tài nguyên và phản hồi nhanh chóng để giúp học sinh sinh viên đạt được mục tiêu học tập một cách hiệu quả.
+              Chúng tôi đảm bảo khả năng tiếp cận các công cụ học tập và tạo môi trường nuôi dưỡng đáp ứng cả nhu cầu học tập và nhu cầu cá nhân của người học.</p>
           </div>
           <div class="col-2 col-md-6 col-lg-4 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="400">
             <span class="h5 fw-lighter">02.</span>
             <h3 class="py-5 border-top border-dark"><span style="color: #ffbc2c;">U</span> - Utilitarian</h3>
-            <p>Focusing on practical, outcome-oriented support maximizes educational benefits for the largest number of
-              students. This approach ensures efficient use of resources, streamlined curricula, and access to tools
-              that enhance skills and employability, directly aligning education with real-world applications and
-              learner success.</p>
+            <p>Tập trung vào hỗ trợ thực tế, hướng đến kết quả giúp tối đa hóa lợi ích giáo dục cho số đông học sinh sinh viên.
+              Phương pháp tiếp cận này đảm bảo việc sử dụng hiệu quả các nguồn lực, chương trình học hợp lý và phương thức truy cập các công cụ nâng cao kỹ năng và khả năng tuyển dụng, trực tiếp gắn kết giáo dục với các ứng dụng thực tế và sự thành công của người học.</p>
           </div>
           <div class="col-3 col-md-6 col-lg-4 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="600">
             <span class="h5 fw-lighter">03.</span>
             <h3 class="py-5 border-top border-dark"><span style="color: #ffbc2c;">N</span> - Needed</h3>
-            <p>SunEd seeks to offer personalized guidance, resources, and responsive assistance to help students achieve
-              their learning goals effectively. We ensure accessibility to learning tools and create a nurturing
-              environment that addresses both academic and personal needs of learners.</p>
+            <p>Trau dồi kiến ​​thức, kỹ năng và phát triển bản thân giúp các cá nhân đóng góp ý nghĩa cho xã hội. SunEd làm vai trò quan trọng trong việc thúc đẩy phát triển cộng đồng, thúc đẩy học tập suốt đời và trang bị cho người học khả năng đáp ứng yêu cầu hay thay đổi của lực lượng lao động và trách nhiệm công dân.</p>
           </div>
         </div>
         <div class="row d-flex align-items-center value">
           <div class="col-1 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <span class="h5 fw-lighter">04.</span>
             <h3 class="py-5 border-top border-dark"><span style="color: #3c4493;">E</span> - Efficient</h3>
-            <p>Focusing on practical, outcome-oriented support maximizes educational benefits for the largest number of
-              students. This approach ensures efficient use of resources, streamlined curricula, and access to tools
-              that enhance skills and employability, directly aligning education with real-world applications and
-              learner success.</p>
+            <p>Các chương trình được sắp xếp hợp lý, tổ chức tốt sẽ tối ưu hóa kết quả học tập và giảm thiểu thời gian và nguồn lực lãng phí.
+              Với sự giao tiếp rõ ràng, hỗ trợ dễ tiếp cận và chương trình giảng dạy được thiết kế chu đáo, SunEd tạo ra trải nghiệm giáo dục hiệu quả phù hợp với nhu cầu của cả học sinh và gia đình.</p>
           </div>
           <div class="col-2 col-md-6 col-lg-4 py-vh-3 pb-0" data-aos="fade-up" data-aos-delay="400">
             <span class="h5 fw-lighter">05.</span>
             <h3 class="py-5 border-top border-dark"><span style="color:#3c4493;">D</span> - Diligent</h3>
-            <p>SunEd seeks to offer personalized guidance, resources, and responsive assistance to help students achieve
-              their learning goals effectively. We ensure accessibility to learning tools and create a nurturing
-              environment that addresses both academic and personal needs of learners.</p>
+            <p>Mục tiêu của SunEd là duy trì các tiêu chuẩn cao, liên tục theo dõi tiến độ và cung cấp hỗ trợ phù hợp để giải quyết các nhu c ầu cá nhân.
+              Thông qua sự hướng dẫn chu đáo và cam kết cải tiến liên tục, chúng tôi đảm bảo mỗi người học đều nhận được nền giáo dục chất lượng, trọng tâm.</p>
           </div>
           <div class="col-3 col-md-6 col-lg-4 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="600">
             <span class="h5 fw-lighter">06.</span>
-            <h3 class="py-5 border-top border-dark"><strong>Our Vision</strong></h3>
-            <p>"<strong>SunEd</strong> becomes one of the leading education and training providers in Vietnam and the region to provide affordable pathways for learners to interact with the international community."</p>
+            <h3 class="py-5 border-top border-dark"><strong>Tầm nhìn</strong></h3>
+            <p>"<strong>SunEd</strong> SunEd là một trong những nhà cung cấp dịch vụ giáo dục và đào tạo hàng đầu tại Việt Nam và khu vực nhằm đưa ra các lộ trình phù hợp để người học tiếp cận, tương tác với cộng đồng quốc tế.</p>
           </div>
         </div>
       </div>
@@ -218,12 +210,13 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <h3 class="py-5 border-top border-dark" data-aos="fade-left" style="font-weight: 800;">Our Mission</h3>
+            <h3 class="py-5 border-top border-dark" data-aos="fade-left" style="font-weight: 800;">
+              Nhiệm vụ</h3>
             <ul data-aos="fade-left" data-aos-delay="200" style="font-size: 1rem;">
-            <li>To introduce liberal arts education to engage learners in different training activities developmental milestones</li><br>
-            <li>To equip learners with advanced teaching & learning approach in world-class quality</li><br>
-            <li>To enable learners to access and participate in global discourses and practices</li><br>
-            <li>To instill a positive attitude towards continuous learning in learners.</li><br>
+            <li>Giới thiệu giáo dục khai phóng gắn kết người học vào các hoạt động đào tạo khác nhau nhằm đạt được các cột mốc phát triển</li><br>
+            <li>Trang bị cho người học phương pháp giảng dạy và học tập tiên tiến, chất lượng đẳng cấp thế giới</li><br>
+            <li>Tạo điều kiện cho người học tiếp cận và tham gia vào các bài diễn thuyết và thực tiễn toàn cầu</li><br>
+            <li>Tạo thái độ tích cực về việc học tập liên tục cho người học.</li><br>
             </ul>
           </div>
         </div>
@@ -234,21 +227,22 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-5 news-title">
-            <h3 class="py-5 border-top border-dark" data-aos="fade-right">OUR NEWS</h3>
+            <h3 class="py-5 border-top border-dark" data-aos="fade-right">Tin tức</h3>
           </div>
           <div class="col-12">
             <div class="row py-vh-5 d-flex align-items-center news-content" style="text-align: center;">
               <div class="col-md-4" data-aos="fade-up">
                 <img src="img/img_Sune/news/blogs/blog1-1.avif" class="img-fluid rounded shadow" alt="nice gallery image">
-                <a href="">Education sector focuses on reform and innovation for the upcoming academic year</a>
+                <a href="">Ngành giáo dục tập trung cải cách, đổi mới sáng tạo cho năm học tới</a>
               </div>
               <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                 <img src="img/img_Sune/news/blogs/blog2-1.png" class="img-fluid rounded shadow" alt="nice gallery image">
-                <a href="">Summary of the 2023-2024 school year for secondary education ...</a>
+                <a href="">Tóm tắt năm học 2023-2024 đối với giáo dục trung học và giáo dục ...</a>
               </div>
               <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
                 <img src="img/img_Sune/news/blogs/blog3-1.avif" class="img-fluid rounded shadow" alt="nice gallery image">
-                <a href="">Making English Vietnam's second language: A challenging but necessary task </a>
+                <a href="">
+                  Đưa tiếng Anh trở thành ngôn ngữ thứ hai của Việt Nam: Một nhiệm vụ đầy thách thức nhưng cần thiết</a>
               </div>
             </div>
             </div>
@@ -261,10 +255,11 @@
         <div class="row d-flex justify-content-center">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8 text-center" data-aos="fade">
-              <h2 class="display-6 mb-3">Ready to expand your horizons?</h2>
+              <h2 class="display-6 mb-3">
+                Bạn đã sẵn sàng để mở đón bầu trời kiến thức?</h2>
             </div>
             <div class="col-12">
-              <a href="#" class="btn btn-xl shadow me-3 mt-2" style="background-color:#ffbc2c;border-radius: 10px;" data-aos="fade-down">Contact Us</a>
+              <a href="#" class="btn btn-xl shadow me-3 mt-2" style="background-color:#ffbc2c;border-radius: 10px;" data-aos="fade-down">Liên hệ</a>
             </div>
           </div>
         </div>
@@ -275,31 +270,31 @@
   <div class="container">
       <div class="row">
           <div class="col-6 contact-left">
-              <div class="text-center">
-                  <h2 data-aos="fade-right" data-aos-delay="200">Ready to expand your horizons?</h2>
+              <div class="text-center overflow-hidden">
+                  <h2 data-aos="fade-right" data-aos-delay="200" class="overflow-hidden">Bạn đã sẵn sàng để mở đón bầu trời kiến thức?</h2>
                   <img src="img/img_Sune/index/contact-img.avif" alt="Kite Image" class="shadow" data-aos="fade-up" data-aos-delay="500">
               </div>
           </div>
           <div class="col-6 contact-right">
-                  <h3 data-aos="fade-left" data-aos-delay="200">Contact us</h3>
+                  <h3 data-aos="fade-left" data-aos-delay="200">Liên hệ</h3>
                   <form data-aos="fade-left" data-aos-delay="500">
                       <div class="mb-3">
-                          <label class="form-label">First Name *</label>
+                          <label class="form-label">Tên *</label>
                           <input type="text" class="form-control" required="">
                       </div>
                       <div class="mb-3">
-                          <label class="form-label">Last Name *</label>
+                          <label class="form-label">Họ *</label>
                           <input type="text" class="form-control" required="">
                       </div>
                       <div class="mb-3">
-                          <label class="form-label">Email *</label>
+                          <label class="form-label">Email*</label>
                           <input type="email" class="form-control" required="">
                       </div>
                       <div class="mb-3">
-                          <label class="form-label">Message</label>
-                          <textarea class="form-control" rows="3">This is a message</textarea>
+                          <label class="form-label">Tin nhắn</label>
+                          <textarea class="form-control" rows="3">Nhập tin nhắn vào đây</textarea>
                       </div>
-                      <button type="submit" class="btn btn-custom w-100">Send</button>
+                      <button type="submit" class="btn btn-custom w-100">Gửi</button>
                   </form>
           </div>
       </div>
@@ -315,34 +310,35 @@
           <img src="/img/img_Sune/index/logo.png" alt="Company Logo" style="width: 8rem;">
         </div>
         <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
-          <h3 class="h6 mb-3">HEAD OFFICE</h3>
+          <h3 class="h6 mb-3">
+            VĂN PHÒNG CHÍNH</h3>
           <address class="text-secondary mt-3">
-            478 Nguyen Tat Thanh Street, Ward 18,District 4, Ho Chi Minh City, Viet Nam.<br><br>
+            478 Nguyễn Tất Thành, Phường 18, Quận 4, Ho Chi Minh City, Viet Nam.<br><br>
             <a href="">+84 779 661 879</a><br><br>
             <a href="">info@suned.edu.vn</a>
           </address>
         </div>
         <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
           <h3 class="h6 mb-3">
-            NAVIGATION
+            ĐIỀU HƯỚNG
           </h3>
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" aria-current="page" href="#">Home</a>
+              <a class="nav-link link-secondary ps-0" aria-current="page" href="/index_vn.html">Trang chủ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" href="#">About Us</a>
+              <a class="nav-link link-secondary ps-0" href="/aboutus_vn.html">Giới thiệu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" href="#">News</a>
+              <a class="nav-link link-secondary ps-0" href="/news-vn.html">Tin tức</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link-secondary ps-0" href="#">Contact</a>
+              <a class="nav-link link-secondary ps-0" href="/contact_vn.html">Liên hệ</a>
             </li>
           </ul>
         </div>
         <div class="col-12 col-lg-6 col-xl-3 p-5">
-          <h3 class="h6 mb-3">FOLLOW US</h3>
+          <h3 class="h6 mb-3">Kênh truyền thông</h3>
           <ul class="nav flex-column">
             <li class="nav-item">
               <a class="nav-link link-secondary ps-0" aria-current="page" href="register.html">Zalo</a>
